# cmake-import-export

external-math-user/software/: CMakeLists.txt  build.sh
external-math-user/software/app/: CMakeLists.txt  main.cpp
math-lib/: CMakeLists.txt
math-lib/.cmake/api/v1/reply/: cache-v2-8326bae5a9d4e854d3a5.json  cmakeFiles-v1-b077193a2dfc7ebaa581.json  codemodel-v2-9c4cc62066f851c47879.json  index-2021-09-22T21-32-12-0335.json  target-MathLib-f42e63dd8c87b60ba770.json
math-lib/scripts/: all.sh  build-cmake.sh  install-library.sh  test.cmd  test.sh
math-lib/software/: CMakeLists.txt  build.cmd  build.sh  test.cmd  test.sh
math-lib/software/math-lib/: CMakeLists.txt
math-lib/software/math-lib/mathlib/: mymath.h
